# wasmedge-stable-diffusion

./: README.md
.github/workflows/: rust.yml
example/: .gitignore  Cargo.toml  wasmedge_stable_diffusion_example.wasm
example/src/: main.rs
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  stable_diffusion_interface.rs
